# python-starter-project

./: .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml
