[project]
name = "python-starter-project"
version = "0.1.0"
description = "A starting configuration for Python projects."
authors = [
    {name = "Kaio Rocha",email = "kaiodtr@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
blue = "^0.9.1"
ruff = "^0.9.3"
commitizen = "^4.1.1"
gitlint = "^0.19.1"

